Removed bugs in layout --fixed spacing issues

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,6 +2,7 @@
 $primary: #FF6B00;
 $dark: rgb(19, 18, 18);
 $grey: #e7e7e7;
+$dark-grey: #838383;
 $light: rgb(254, 254, 254);
 $red: rgb(161, 30, 30);
 // defaults
